--- a/restaurant.css
+++ b/restaurant.css
@@ -209,8 +209,7 @@ header.header{
     color: var(--primary-color);
     font-size: 2.5rem;
     text-align: center;
-    margin-bottom: 30px;
-
+    margin-bottom: 30px;
 }
 .about-content{
     display: flex;
@@ -224,5 +223,16 @@ header.header{
     max-width: 100%;
     border-radius: 10px;
 
-
+}
+.footer{
+    background-color: var(--primary-color);
+    color: white;
+    text-align: center;
+    padding: 30px 20px;
+}
+.footer p{
+    margin-top: 10px;
+}
+.footer h3{
+    font-family: var(--heading-font);
 }
